# full-python

./: .gitignore  HANDOFF.md  README.md  pyproject.toml
docs/: live-observe-runbook.md  operational-readiness-plan.md
scripts/: audit_trades.py  export_golden_trades.py  freeze_baseline_anchor.py  run_baseline_walk_forward.py  run_component_ablation.py  run_execution_cost_axis.py  run_execution_timing_axis.py  run_intrabar_bounds.py  run_mnq_pilot_sizing.py  run_opening_auction_experiment.py  run_opening_auction_retest_experiment.py  run_overnight_displacement_reversal_experiment.py  sweep_entry_window.py  sweep_ma_lengths.py  sweep_sr_interaction.py  verify_tv_basis.py
tests/: test_adaptive_trend.py  test_am_dll.py  test_baseline_exits.py  test_baseline_strategy.py  test_bootstrap_report.py  test_cli_baseline.py  test_cli_contract_calendar.py  test_cli_exit_sweep.py  test_cli_inventory.py  test_cli_selected_stream.py  test_cli_trade_analysis.py  test_cli_trade_simulation.py  test_cli_trades.py  test_component_ablation.py  test_contract_authority.py  test_contract_calendar.py  test_daily_metrics.py  test_data_loading.py  test_data_validation.py  test_databento.py  test_databento_inventory.py  test_databento_loader.py  test_event_ledger.py  test_exchange_calendar.py  test_execution_scenarios.py  test_execution_simulator.py  test_execution_state_machine.py  test_execution_timing.py  test_exit_sweep.py  test_experiment_registry.py  test_failure_matrix_e2e.py  test_freeze_baseline_anchor.py  test_golden_trades.py  test_html_report.py  test_indicators.py  test_instruments.py  (+60 more)
(+239 files in other folders)
