[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "full-python"
version = "0.1.0"
description = "Python-first NQ/MNQ research, replay, and eventual execution system."
requires-python = ">=3.9"
# Stdlib-only by design (HANDOFF §3 working method; audit P2-4 removed the
# declared-but-never-imported numpy/pandas). Add a runtime dependency only
# with an actual import that uses it.
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]
databento = [
    "zstandard>=0.22",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
